# stagecraft

./: Cargo.toml  README.md  flake.nix
examples/: counter.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: actor.rs  context.rs  handle.rs  lib.rs  mailbox.rs
