[workspace]
members = [".", "macros"]
resolver = "2"

[package]
name = "stagecraft"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
repository = "https://github.com/verdiwm/stagecraft"
description = "Actor framework"
documentation = "https://docs.rs/stagecraft"
include = ["src/**/*.rs", "README.md", "LICENSE"]


[dependencies]
stagecraft-macros = { version = "0.0.1", path = "macros" }
futures-core = "0.3.32"
tokio = { version = "1.50.0", features = ["macros"] }
tokio-stream = "0.1.18"
tokio-util = { version = "0.7.18", features = ["rt"] }
